edit dir name
